refactor(pkg): standardize api response and error handling mechanism
